--- a/public/css/resume_work.css
+++ b/public/css/resume_work.css
@@ -81,9 +81,14 @@ li {
 	font-weight: bold;
 }
 
+body {
+	background-image: url(../img/concrete_seamless.png);
+}
+
 footer {
 	clear: both;
-	background-color: #eee;
+	background-color: #222;
+	color: #fff;
 	height: 40px;
 	padding: 10px;
 }
