--- a/public/css/resume.css
+++ b/public/css/resume.css
@@ -1,7 +1,20 @@
+body{
+	margin-bottom:80px;
+}
+html
+{
+	min-height: 100%;
+	position:relative;
+}
 #current {
 	font-weight: bold;
 	font-size: 22px;
 }
+.marketing
+{
+	margin-bottom:-40px;
+}
+
 
 .fa {
 	position: absolute;
@@ -28,8 +41,13 @@
 }*/
 
 footer {
-	clear: both;
-	background-color: #eee;
+	position:absolute;
+	bottom:0px;
+	width:100%;
 	height: 40px;
 	padding: 10px;
+}
+footer .container
+{
+	background-color:#eee;
 }
