--- a/public/css/resume_edu.css
+++ b/public/css/resume_edu.css
@@ -1,7 +1,19 @@
+body {
+	background-image: url(../img/concrete_seamless.png);
+	margin-bottom: 80px;
+}
+
+html {
+	min-height: 100%;
+	position: relative;
+}
+
 #current {
 	font-weight: bold;
 	font-size: 22px;
+	font-family: 'Kaushan Script', cursive;
 }
+
 
 #headshot {
 	height: 180px;
@@ -73,6 +85,10 @@
 	border-radius: 10px;
 }
 
+.col-xs-9 {
+	background-color: #ffffef;
+}
+
 li {
 	list-style: square;
 }
@@ -81,14 +97,17 @@ h4 {
 	font-weight: bold;
 }
 
-body {
-	background-image: url(../img/concrete_seamless.png);
+footer>.container{
+	background-color: #222;
+	padding-top: 5px;
 }
 
 footer {
-	clear: both;
-	background-color: #222;
+	position: absolute;
+	bottom: 0px;
+	/*background-color: #222222;*/
 	color: #fff;
 	height: 40px;
+	width: 100%;
 	padding: 10px;
 }
