--- a/public/css/resume_work.css
+++ b/public/css/resume_work.css
@@ -1,6 +1,17 @@
+body {
+	background-image: url(../img/concrete_seamless.png);
+	margin-bottom: 80px;
+}
+
+html {
+	min-height: 100%;
+	position: relative;
+}
+
 #current {
 	font-weight: bold;
 	font-size: 22px;
+	font-family: 'Kaushan Script', cursive;
 }
 
 #headshot {
@@ -71,6 +82,7 @@
 .border {
 	border: 1px solid #777777;
 	border-radius: 10px;
+	background-color: #ffffef
 }
 
 li {
@@ -78,18 +90,21 @@ li {
 }
 
 .col-xs-10 h4 {
-	font-weight: bold;
+	/*font-weight: bold;*/
+	font-family: 'Kaushan Script', cursive;
 }
 
-body {
-	background-image: url(../img/concrete_seamless.png);
+footer>.container{
+	background-color: #222;
+	padding-top: 5px;
 }
 
 footer {
-	clear: both;
-	background-color: #222;
+	position: absolute;
+	bottom: 0px;
+	/*background-color: #222222;*/
 	color: #fff;
 	height: 40px;
+	width: 100%;
 	padding: 10px;
 }
-
