--- a/public/css/resume_edu.css
+++ b/public/css/resume_edu.css
@@ -18,6 +18,7 @@ html {
 #headshot {
 	height: 180px;
 	width: 180px;
+	border: 2px solid #777;
 	border-radius: 150px;
 	/*position: relative;
 	top: 25px;
@@ -29,10 +30,18 @@ html {
 	position: relative;
 }
 
+#profile_box_container {
+	position: fixed;
+	float: left;
+}
+
 #profile_box {
+	float: left;
 	position: relative;
 	left: 50px;
-	border: 2px solid #333333;
+	/*border: 2px solid #333333;*/
+	border-bottom: 3px solid #777;
+	border-right: 3px solid #777;
 	width: 220px;
 	border-radius: 10px;
 	background-color: #333333;
@@ -44,13 +53,14 @@ html {
 }
 
 #profile_box h2 {
-	margin-left: 10px;
+	margin-left: 12px;
 	margin-bottom: 25px; 
 }
 
 #profile_box button {
 	text-decoration: none;
-	margin-left: 5px;
+	margin-left: 6px;
+	/*text-align: left;*/
 	width: 205px;
 	margin-bottom: 5px;
 }
@@ -66,7 +76,6 @@ html {
 
 #main_h1 {
 	position: relative;
-	margin-left: 7px;
 	padding-bottom: 5px;
 	color: #ffffef;
 }
@@ -83,6 +92,11 @@ html {
 .border {
 	border: 1px solid #777777;
 	border-radius: 10px;
+}
+
+.col-md-8 {
+	position: relative;
+	left: 50px;
 }
 
 .col-xs-9 {
